# Claude-LAN-Manager-0126

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
Planning/: initial-targets.md  roadmap.md  specification.md  transcript-cleaned.md  transcript-verbatim.md
config/: config.example.yaml
examples/simple-mcp-server/: README.md  requirements.txt  server.py
src/claude_lan_manager/: __init__.py  app.py  config.py  launcher.py  multiplexer.py  setup.py
